# libstudxml

./: INSTALL  INSTALL-GIT  LICENSE  Makefile.am  README  bootstrap  configure.ac  libstudxml-vc10.sln  libstudxml-vc11.sln  libstudxml-vc12.sln  libstudxml-vc9.sln  libstudxml.pc.in  makefile  tester.bat  tester.in  version
doc/: Makefile.am  intro.xhtml  makefile
examples/: Makefile.am  makefile  test.bat
examples/hybrid/: dom.cxx  dom.hxx  driver.cxx  makefile
examples/inheritance/: driver.cxx  makefile  position.cxx  position.hxx  position.xml
examples/performance/: driver.cxx  makefile  time.cxx  time.hxx
examples/persistence/: driver.cxx  makefile  position.cxx  position.hxx
examples/processing/: driver.cxx  makefile
examples/roundtrip/: driver.cxx  makefile
examples/template/: Makefile.am  template-vc10.vcxproj  template-vc11.vcxproj  template-vc12.vcxproj  template-vc9.vcproj
examples/xhtml/: driver.cxx  makefile
m4/: diff.m4  disable-rpath.m4  libexpat.m4  libtool-link.m4  pkgconfig.m4  static-lib.m4
tests/: Makefile.am  makefile  test.bat
tests/parser/: driver.cxx  makefile
tests/roundtrip/: driver.cxx  makefile
tests/serializer/: driver.cxx  makefile
tests/template/: Makefile.am  template-vc10.vcxproj  template-vc11.vcxproj  template-vc12.vcxproj  template-vc12.vcxproj.filters  template-vc9.vcproj
xml/: Makefile.am  content  content.hxx  exception  exception.hxx  forward  forward.hxx  makefile  parser  parser.cxx  parser.hxx  parser.ixx  parser.txx  qname  qname.cxx  qname.hxx  serializer  serializer.cxx  serializer.hxx  serializer.ixx  value-traits  value-traits.cxx  value-traits.hxx  value-traits.txx
xml/details/: config-vc.h  config.h.in  config.hxx  export.hxx  post.hxx  pre.hxx
xml/details/expat/: config.h  xmlparse.c
xml/details/genx/: LICENSE  char-props.c  genx.c  genx.h
