# file      : Makefile.am
# copyright : Copyright (c) 2009-2013 Code Synthesis Tools CC
# license   : MIT; see accompanying LICENSE file

SUBDIRS = __path__(dirs)
dist_doc_DATA = __file__(docs)
EXTRA_DIST = __file__(extra_dist)
ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libstudxml.pc
